--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
 
     <string name="tambah_mobil">Tambah Mobil </string>
 
-    <string name="nama">Nama</string>
+    <string name="nama">Nama Mobil</string>
     <string name="isi">Mobil</string>
 
     <string name="kembali">Kembali</string>
@@ -21,4 +21,7 @@
     <string name="pesan_hapus">Hapus catatan ini?</string>
     <string name="tombol_hapus">Hapus</string>
     <string name="tombol_batal">Batal</string>
+
+    <string name="list">Tampilan list</string>
+    <string name="grid">Tampilan grid</string>
 </resources>
