--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Assessment2 MobPro</string>
+    <string name="app_name">MobilKu</string>
     <string name="list_kosong">Belum ada data </string>
     <string name="x_diklik">%1$s diklik! </string>
 
